# duckle

./: .all-contributorsrc  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.web  README.md  docker-compose.coolify.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-web.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/connectors/: Cargo.toml
crates/duckdb-engine/: Cargo.toml
crates/duckdb-engine/examples/: oracle_repro.rs
crates/duckdb-engine/src/: connectors.rs  context.rs  error_category.rs  history.rs  lib.rs  lineage.rs  plan.rs  qvd.rs  run_log.rs  util.rs  watermark.rs
crates/duckdb-engine/src/plan/: builders.rs  graph.rs  mod.rs  specs.rs  tests.rs
crates/duckdb-engine/tests/: execution.rs  fixture.qvd
crates/duckle-lance/: Cargo.toml
crates/duckle-mcp/: Cargo.toml  catalog.json
crates/duckle-runner/: Cargo.toml
crates/metadata/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
docs/: ROADMAP-IDEAS.md  deploy-coolify.md  roadmap.md
docs/00_foundation/: 00_duckle-fork-foundation.md  01_local-studio-surfaces.md  02_local-studio-quickstart.md  03_duckdb-cli-execution-model.md
docs/01_nodes/: 00_node-inventory.md  01_source-node-contracts.md  02_transform-node-contracts.md  03_sink-node-contracts.md  04_quality-node-contracts.md  05_control-and-code-node-contracts.md
docs/current/: architecture.md  connectors.md  engines.md  getting-started.md  index.md  installation.md  mcp.md  scheduler.md  transforms.md
docs/design/: dives.md
examples/starter-workspace/: duckle.json  gen_samples.sql  repository.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: build-catalog.mjs  export-catalog.ts  gen-brand-icons.mjs
frontend/src/: App.tsx  EngineUpgradeBanner.tsx  GuidedTour.tsx  ReviewPrompt.tsx  errors.ts  main.tsx  run-resolve.ts  schema-resolve.ts  styles.css  tauri-bridge.ts  validation.ts  web-fs.ts  workspace.ts
runs/: p_mqqc4kkt_92cno.json  p_mqqdcfl6_5fuy6.json
samples/: ok.parquet
scripts/: build-runner-linux.sh  render_icon.py
website/: index.html  learn.html  use-cases.html
website/docs/: ai-duckie.html  automation.html  components.html  getting-started.html  index.html  integrations.html  learn.html
(+56 files in other folders)
