[package]
name = "duckle-duckdb-engine"
description = "DuckDB-backed execution engine for Duckle pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
# Blocking HTTP client for SaaS connectors (snk.webhook, snk.rest,
# src.rest, vector-DB HTTP APIs). ureq is ~20kb with minimal deps
# vs ~100kb for reqwest + tokio, and it matches the per-stage CLI
# shell-out model we already use (one synchronous round-trip).
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3.10"
