[package]
name = "duckle-duckdb-engine"
description = "DuckDB-backed execution engine for Duckle pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
# Blocking HTTP client for SaaS connectors (snk.webhook, snk.rest,
# src.rest, vector-DB HTTP APIs). ureq is ~20kb with minimal deps
# vs ~100kb for reqwest + tokio, and it matches the per-stage CLI
# shell-out model we already use (one synchronous round-trip).
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# Snowflake JWT RS256 auth path. Reads a PEM-encoded private key,
# derives the public-key fingerprint, and signs the standard
# Snowflake claims (iss / sub / iat / exp). PAT bearer auth is also
# supported and doesn't pull these in.
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
